--- a/project.config.json
+++ b/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"miniprogramRoot": "./dist/",
 	"compileType": "miniprogram",
-	"appid": "wx281d3020ec123e78",
+	"appid": "xxxxxx",
 	"projectname": "my2048%E5%B0%8F%E6%B8%B8%E6%88%8F",
 	"condition": {
 		"search": {
